examples/test/testpolicy3611.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3611
  namespace: namespace259
spec:
  podSelector:
    matchLabels:
      key29: value24
      key43: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value0
          key28: value43
          key2: value14
      podSelector:
        matchLabels:
          key32: value12
          key14: value43
